# jazzer

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  format.sh  repositories.bzl
src/main/java/com/code_intelligence/jazzer/: BUILD.bazel  Jazzer.java
src/main/java/com/code_intelligence/jazzer/agent/: AgentInstaller.java  RuntimeInstrumentor.kt
src/main/java/com/code_intelligence/jazzer/android/: AndroidManifest.xml  AndroidStart.java  AndroidStartWrapper.java  BUILD.bazel  D8Wrapper.java  R8Wrapper.java
src/main/java/com/code_intelligence/jazzer/compile/: BUILD.bazel  R8Wrapper.java
src/main/java/com/code_intelligence/jazzer/driver/: BUILD.bazel  Driver.java  FuzzedDataProviderImpl.java  OfflineInstrumentor.java  Opt.java  SignalHandler.java
src/main/java/com/code_intelligence/jazzer/runtime/: BUILD.bazel  CoverageMap.java  FuzzTargetRunnerNatives.java  Mutator.java  TraceDataFlowNativeCallbacks.java
src/main/java/com/code_intelligence/jazzer/runtime/stubs/: CoverageMap.java  TraceDataFlowNativeCallbacks.java
src/main/java/com/code_intelligence/jazzer/utils/: ZipUtils.java
src/main/native/com/code_intelligence/jazzer/driver/: BUILD.bazel
