load("//bazel:compat.bzl", "ANDROID_ONLY", "SKIP_ON_WINDOWS")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

java_library(
    name = "wrapper",
    srcs = ["AndroidStartWrapper.java"],
    resources = [
        "//src/main/java/com/code_intelligence/jazzer/runtime:jazzer_bootstrap_import",
        "//src/main/java/com/code_intelligence/jazzer:jazzer_import",
    ],
)

android_library(
    name = "jazzer_android_lib",
    srcs = [
        "AndroidStart.java",
    ],
    deps = [
        ":wrapper",
    ],
    tags = ["manual"],
    target_compatible_with = ANDROID_ONLY,
)

android_binary(
    name = "jazzer_android",
    manifest = "AndroidManifest.xml",
    min_sdk_version = 31,
    tags = ["manual"],
    target_compatible_with = SKIP_ON_WINDOWS,
    visibility = ["//visibility:public"],
    deps = [
        ":jazzer_android_lib",
    ],
)

copy_file(
    name = "jazzer_jar",
    src = "jazzer_android_deploy.jar",
    out = "jazzer_android.jar",
    visibility = [
        "//src/main/java/com/code_intelligence/jazzer/agent:__pkg__",
    ],
)

java_binary (
    name = "d8_wrapper",
    data = [
        ":jazzer_jar",
    ],
    srcs = ["D8Wrapper.java"],
    deps = [
        "//src/main/java/com/code_intelligence/jazzer/driver:offline_instrumentor",
        "//src/main/java/com/code_intelligence/jazzer/driver:opt",
        "//src/main/java/com/code_intelligence/jazzer/utils:log",
    ],
)

pkg_tar(
    name = "d8_release",
    srcs = [
        ":jazzer_jar",
        ":d8_wrapper_deploy.jar",
    ],
    extension = "tar.gz",
    mode = "0777",
)