load("//bazel:compat.bzl", "ANDROID_ONLY", "SKIP_ON_WINDOWS")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

java_library(
    name = "wrapper",
    srcs = ["AndroidStartWrapper.java"],
    resources = [
        "//src/main/java/com/code_intelligence/jazzer/runtime:jazzer_bootstrap_import",
        "//src/main/java/com/code_intelligence/jazzer:jazzer_import",
    ],
)

android_library(
    name = "jazzer_android_lib",
    srcs = [
        "AndroidStart.java",
    ],
    deps = [
        ":wrapper",
    ],
    tags = ["manual"],
    target_compatible_with = ANDROID_ONLY,
)

android_binary(
    name = "jazzer_android",
    manifest = "AndroidManifest.xml",
    min_sdk_version = 31,
    tags = ["manual"],
    target_compatible_with = SKIP_ON_WINDOWS,
    visibility = ["//visibility:public"],
    deps = [
        ":jazzer_android_lib",
    ],
)

copy_file(
    name = "jazzer_jar",
    src = "jazzer_android_deploy.jar",
    out = "jazzer_android.jar",
    visibility = [
        "//src/main/java/com/code_intelligence/jazzer/agent:__pkg__",
    ],
)

copy_file(
    name = "jazzer_shaded_jar",
    src = "//src/main/java/com/code_intelligence/jazzer:jazzer",
    out = "jazzer.jar",
    visibility = [
        "//src/main/java/com/code_intelligence/jazzer/agent:__pkg__",
    ],
)

copy_file(
    name = "jazzer_bootstrap_jar",
    src = "//src/main/java/com/code_intelligence/jazzer/runtime:jazzer_bootstrap",
    out = "jazzer_bootstrap.jar",
    visibility = [
        "//src/main/java/com/code_intelligence/jazzer/agent:__pkg__",
    ],
)

java_binary (
    name = "r8",
    resources = [
        ":jazzer_jar",
    ],
    main_class = "com.code_intelligence.jazzer.r8.R8Wrapper",
    srcs = ["R8Wrapper.java"],
    deps = [
        "//src/main/java/com/code_intelligence/jazzer/driver:offline_instrumentor",
        "//src/main/java/com/code_intelligence/jazzer/driver:opt",
        "//src/main/java/com/code_intelligence/jazzer/utils:log",
        "//third_party/android:local_r8",
    ],
)

# Build pkg_tar, building java_binary directly will not pass
# the build config through to the android/cc rules, this
# is an easy workaround for that
pkg_tar(
    name = "r8_release",
    srcs = [
        ":r8_deploy.jar",
    ],
    extension = "tar.gz",
    mode = "0777",
)
